--- a/src/styles/detailCard.scss
+++ b/src/styles/detailCard.scss
@@ -9,6 +9,10 @@
     width: 800px;
     padding: 1rem;
     margin-top: 2rem;
+
+     @media (max-width: 950px) {
+    background-color: blue;
+  }
 }
 
 .detailCard img {
@@ -25,6 +29,4 @@
 .detailCard_Text img {
     width: 100px;
     height: auto;
-
-
 }
