--- a/src/styles/detailCard.scss
+++ b/src/styles/detailCard.scss
@@ -11,12 +11,17 @@
     margin-top: 2rem;
 
      @media (max-width: 950px) {
-    background-color: blue;
+    width: 100%;
+    flex-direction: column;
+    margin-bottom: 0;
+
+    
   }
 }
 
 .detailCard img {
     height: 500px;
+    margin-bottom: 1rem;
 }
 
 .detailCard_Text {
