added button back

--- a/src/styles/detailCard.scss
+++ b/src/styles/detailCard.scss
@@ -35,3 +35,15 @@
     width: 100px;
     height: auto;
 }
+
+.detail__nobody {
+    font-size: 2rem;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.detail__back {
+    margin-top: 2rem;
+    cursor:pointer;
+}
